--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": "10.x"
